[gd_scene load_steps=33 format=2]

[ext_resource path="res://scripts/turret_01.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemies/towerDefense_tile298.png" type="Texture" id=2]
[ext_resource path="res://sprites/enemies/towerDefense_tile250.png" type="Texture" id=3]
[ext_resource path="res://samples/projectil_hit.wav" type="AudioStream" id=4]
[ext_resource path="res://sprites/enemies/towerDefense_tile226.png" type="Texture" id=5]
[ext_resource path="res://sprites/smokeWhite1.png" type="Texture" id=6]
[ext_resource path="res://scripts/wake_spot.gd" type="Script" id=7]
[ext_resource path="res://sprites/explosion5.png" type="Texture" id=8]
[ext_resource path="res://sprites/explosionSmoke1.png" type="Texture" id=9]
[ext_resource path="res://sprites/explosion1.png" type="Texture" id=10]
[ext_resource path="res://sprites/explosion2.png" type="Texture" id=11]
[ext_resource path="res://sprites/explosion4.png" type="Texture" id=12]
[ext_resource path="res://sprites/explosion3.png" type="Texture" id=13]
[ext_resource path="res://sprites/enemies/towerDefense_tile019.png" type="Texture" id=14]
[ext_resource path="res://sprites/enemies/towerDefense_tile020.png" type="Texture" id=15]
[ext_resource path="res://samples/tank_explosion.wav" type="AudioStream" id=16]
[ext_resource path="res://scenes/hp_bar.tscn" type="PackedScene" id=17]
[ext_resource path="res://cannon.gd" type="Script" id=18]
[ext_resource path="res://sprites/enemies/towerDefense_tile249.png" type="Texture" id=19]
[ext_resource path="res://HOME.gd" type="Script" id=20]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HMG/sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -9.03387, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HMG/sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0002 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HMG/fire/fire2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HMG/fire/fire1:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HMG/fire/fire1:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 50.3123, -6.90833 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HMG/fire/fire2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 50.3124, 6.47028 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "shoot"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("HMG/sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -22.8504, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HMG/fire/fire2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HMG/fire/fire1:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HMG/fire/fire1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 50.3123, -6.90833 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HMG/fire/fire2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 50.3124, 6.47028 ) ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 23.2099

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.993548, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 0.3 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_curve = SubResource( 9 )
color_ramp = SubResource( 7 )

[sub_resource type="CircleShape2D" id=15]
radius = 100.0

[sub_resource type="CircleShape2D" id=11]
radius = 24.0995

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../soot:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=14]
resource_name = "explode"
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2.08346, 2.08346 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../soot:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="turret_01" type="StaticBody2D" groups=["radar_entity"]]
collision_layer = 10
collision_mask = 9
script = ExtResource( 1 )
sensor_radius = 100.0
type = 1

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="poly" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -10.5079, -22.6941, -11.1032, -13.765, -18.4449, -13.9634, -19.0402, 6.67283, -11.3016, 13.4193, -10.9047, 22.7453, 9.92992, 22.5468, 10.5252, 13.2209, 19.2559, 5.48228, 19.0575, -14.1618, 11.9142, -15.1539, 9.73149, -22.6941 )

[node name="HMG" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 0
script = ExtResource( 18 )

[node name="stream_shoot" type="AudioStreamPlayer" parent="HMG"]
stream = ExtResource( 4 )

[node name="cannon_anim" type="AnimationPlayer" parent="HMG"]
root_node = NodePath("../..")
autoplay = "shoot"
anims/RESET = SubResource( 3 )
anims/shoot = SubResource( 4 )

[node name="shoot_timer" type="Timer" parent="HMG"]
wait_time = 0.5

[node name="sprite" type="Sprite" parent="HMG"]
position = Vector2( -9.03387, 0 )
rotation = 1.5708
texture = ExtResource( 3 )
offset = Vector2( -0.160278, -11.3925 )

[node name="shape" type="CollisionShape2D" parent="HMG"]
shape = SubResource( 1 )

[node name="sight" type="RayCast2D" parent="HMG"]
enabled = true
cast_to = Vector2( 100, 0 )

[node name="fire" type="Node2D" parent="HMG"]

[node name="fire1" type="Sprite" parent="HMG/fire"]
position = Vector2( 50.3123, -6.90833 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="fire2" type="Sprite" parent="HMG/fire"]
position = Vector2( 50.3124, 6.47028 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="smoke" type="Particles2D" parent="HMG"]
position = Vector2( 29.7302, 0 )
emitting = false
amount = 4
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 6 )

[node name="HOME" type="Area2D" parent="."]
script = ExtResource( 20 )

[node name="sprite" type="Sprite" parent="HOME"]
rotation = 1.5708
texture = ExtResource( 19 )
offset = Vector2( 0.0242618, -5.76129 )

[node name="sensor" type="Area2D" parent="."]
position = Vector2( 0, 0.25 )
collision_layer = 0

[node name="shape" type="CollisionShape2D" parent="sensor"]
shape = SubResource( 15 )

[node name="wake_spot" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 0
script = ExtResource( 7 )

[node name="shape" type="CollisionShape2D" parent="wake_spot"]
shape = SubResource( 11 )

[node name="soot" type="Sprite" parent="."]
visible = false
texture = ExtResource( 14 )

[node name="TowerDefenseTile020" type="Sprite" parent="soot"]
texture = ExtResource( 15 )

[node name="explosion" type="Node2D" parent="."]

[node name="sprite" type="Sprite" parent="explosion"]
visible = false
position = Vector2( -0.53364, 0.499994 )
texture = ExtResource( 9 )

[node name="anim" type="AnimationPlayer" parent="explosion"]
anims/RESET = SubResource( 13 )
anims/explode = SubResource( 14 )

[node name="stream" type="Node" parent="."]

[node name="stream_hit" type="AudioStreamPlayer2D" parent="stream"]
stream = ExtResource( 4 )

[node name="stream_explosion" type="AudioStreamPlayer2D" parent="stream"]
stream = ExtResource( 16 )

[node name="hp_bar" parent="." instance=ExtResource( 17 )]
margin_left = -71.0
margin_top = -42.766
margin_right = 68.0
margin_bottom = -34.766

[connection signal="timeout" from="HMG/shoot_timer" to="HMG" method="_on_shoot_timer_timeout"]
[connection signal="body_entered" from="sensor" to="." method="_on_sensor_body_entered"]
[connection signal="body_exited" from="sensor" to="." method="_on_sensor_body_exited"]
[connection signal="damage" from="wake_spot" to="." method="_on_wake_spot_damage"]
